--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                 // Create the style tag
                 const style = document.createElement('style');
                 style.textContent = `
+                    * {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        height: 100vh;
+                    }
                     input {
                         font-size: 1.2rem;
                         padding: 8px 12px;
