--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 const shadowRoot = this.attachShadow({ mode: 'open' });
 
                 // Create the input element
+                const div = document.createElement('div');
                 const input = document.createElement('input');
                 input.type = 'text';
                 input.maxLength = 6;
@@ -25,11 +26,13 @@
                 input.placeholder = 'Enter 6-digit one-time code';
                 input.setAttribute('inputmode', 'numeric');
                 input.setAttribute('autocomplete', 'one-time-code');
+                
 
+                
                 // Create the style tag
                 const style = document.createElement('style');
                 style.textContent = `
-                    * {
+                    div {
                         display: flex;
                         flex-direction: column;
                         justify-content: center;
@@ -49,7 +52,8 @@
 
                 // Add input and style elements to the shadow root
                 shadowRoot.appendChild(style);
-                shadowRoot.appendChild(input);
+                div.appendChild(input)
+                shadowRoot.appendChild(div);
             }
         }
 
